--- a/requirements-offline.txt
+++ b/requirements-offline.txt
@@ -1,11 +1,11 @@
 
-# 인터넷 금지 
+# offline only
 --no-index
 --find-links ./wheelhouse
 
 wheel
 
-# py3dtiles 9.0.0 호환 고정 세트
+# py3dtiles 9.0.0
 numpy==1.26.4
 cython
 earcut
@@ -20,7 +20,7 @@ pyzmq==26.3.0
 # DB
 psycopg2-binary
 
-# py3dtilers 쪽 deps
+# py3dtilers deps
 pywavefront
 pyyaml
 scipy
@@ -33,6 +33,6 @@ triangle
 
 py3dtiles==9.0.0
 
-# (Ifctiler) 사용시 추가
+# (Ifctiler)
 earclip==1.1
 py3dtiles-temporal-extension==1.0
